--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.58.0",
+    "axios": "^1.13.2",
     "humanize-duration": "^3.33.1",
     "quil": "^1.1.30",
     "quill": "^2.0.3",
@@ -19,6 +20,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
     "react-simple-star-rating": "^5.1.7",
+    "react-toastify": "^11.0.5",
     "react-youtube": "^10.1.0",
     "uniqid": "^5.4.0"
   },
